<resources>
    <string name="app_name">Gyanjyoti</string>
    <string name="app_logo_alt">Digital Campus Logo</string>
    <string name="gcm_defaultSenderId">1084526475504</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>
    <string name="menu_download">Download Courses</string>
    <string name="menu_language">Change language</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_font_increase">Increase text size</string>
    <string name="menu_font_decrease">Decrease text size</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
    <string name="menu_scorecard">Scorecard</string>
    <string name="menu_search">Search</string>
    <string name="menu_stop_read_aloud">Stop reading</string>
    <string name="service_tracker">Gyanjyoti Tracker Service</string>
    <string name="fragment_welcome_title">Welcome to Gyanjyoti</string>
    <string name="fragment_welcome_desc">Gyanjyoti is a mobile learning platform for delivering learning content, video and quizzes.</string>
    <string name="fragment_welcome_login_info">To get started with Gyanjyoti, you will need to register or login.</string>
    <string name="fragment_welcome_privacy">We take your privacy seriously, <a href="http://digital-campus.org/privacy/">find out more about Digital Campus\'s privacy policy</a></string>
    <string name="routing_activity_title">Please select what you would like to do:</string>
    <string name="routing_button_mlearning">mLearning</string>
    <string name="routing_button_client">Client Counselling</string>
    <string name="tab_title_about">About</string>
    <string name="tab_title_badges">Badges</string>
    <string name="tab_title_help">Help</string>
    <string name="tab_title_login">Login</string>
    <string name="tab_title_points">Points</string>
    <string name="tab_title_privacy">Privacy</string>
    <string name="tab_title_register">Register</string>
    <string name="tab_title_reset">Reset Password</string>
    <string name="tab_title_scorecard">Scorecard</string>
    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_welcome">Welcome</string>
    <string name="title_about">About</string>
    <string name="title_baseline">Baseline</string>
    <string name="title_btn_reset">Reset password</string>
	<string name="title_download_activity">Manage courses</string>
    <string name="title_activity_course_index">Course Index</string>
    <string name="title_activity_course">Activity</string>
    <string name="title_course_meta">About</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_stats_submitted">No activities submitted to server</string>
    <string name="title_stats_unsubmitted">No activities waiting to submit</string>
    <string name="title_prefs">Settings</string>
    <string name="title_scorecard">Scorecard</string>
    <string name="title_search">Search</string>
    <string name="title_tag_select_activity">Select Category</string>
    <string name="title_welcome">Gyanjyoti</string>
    <string name="version">Version: %1$s</string>
    <string name="title_download_media">Download Media</string>
    <string name="title_activity_client_list">Client List</string>
    <string name="title_activity_client_info">Client Info</string>
    <string name="widget_feedback_submit">Submit</string>
    <string name="widget_feedback_submit_title">Thank you for submitting your feedback.</string>
    <string name="widget_quiz_next">Next &gt;&gt;</string>
    <string name="widget_quiz_prev">&lt;&lt; Prev</string>
    <string name="widget_quiz_getresults">Get Results</string>
    <string name="widget_quiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
 	<string name="widget_quiz_results_score">You scored: %1$.0f%%</string>
 	<string name="widget_quiz_results_restart">Retake this quiz</string>
 	<string name="widget_quiz_baseline_completed">Thank you for completing the pre-test. You can now continue to the course.</string>
 	<string name="widget_quiz_baseline_goto_course">Continue to course &gt;&gt;</string>
 	<string name="widget_quiz_image_caption">Press the image to view larger version</string>
 	<string name="widget_quiz_media_caption">Press the image to start the video</string>
 	<string name="widget_quiz_feedback_response_title">You answered: </string>
 	<string name="widget_quiz_feedback_feedback_title">Feedback: </string>
 	<string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
 	<string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
 	<string name="widget_resource_open_file">Open \'%1$s\'</string>
 	<string name="course_context_reset">Reset</string>
 	<string name="course_context_delete">Delete</string>
 	<string name="course_context_update_activity">Update activity</string>
 	<string name="course_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
 	<string name="course_context_delete_confirm">Are you sure you want to delete this course? It will completely remove the course from your phone.</string>
 	<string name="no_courses">There are no courses currently installed</string>
 	<string name="more_courses">Download more courses</string>
	<string name="prefAdvanced">Advanced settings</string>
	<string name="prefBackgroudDataConnect">Background activity tracker</string>
	<string name="prefBackgroudDataConnect_summary">Send activity logs even when this application isn\'t running</string>
	<string name="prefLanguage">Preferred Language</string>
	<string name="prefHighlightCompleted">Highlight completed activities</string>
	<string name="prefNoScheduleReminders">Number of suggested activities</string>
	<string name="prefNoScheduleReminders_summary">How many suggested activities to display</string>
	<string name="prefServer">Server</string>
	<string name="prefServerTimeoutConnection">Connection timeout</string>
	<string name="prefServerTimeoutResponse">Response timeout</string>
	<string name="prefShowCourseDescription">Show course description</string>
	<string name="prefShowProgressBar">Show progress bar</string>
	<string name="prefShowScheduleReminders">Display suggested activities</string>
	<string name="prefShowScheduleReminders_summary">Show which activities you are due to complete next</string>
	<string name="prefShowSectionNumbers">Show section numbers</string>
	<string name="prefTextSize">Text size</string>
	<string name="prefUser">Username</string>
	<string name="prefUserHint">(read only)</string>
	<string name="prefLogoutEnabled">Enable logout from homepage</string>
	<string name="prefDeleteCourseEnabled">Enable deleting of courses</string>
	<string name="prefDownloadViaCellularEnabled">Download media via cellular network</string>
    <string name="prefStorageLocation">Storage Location</string>
    <string name="prefStorageOptionInternal">Internal</string>
    <string name="prefStorageOptionExternal">External</string>
    <string name="moving_storage_location">Moving files to new storage location…</string>
    <string name="move_storage_completed">Moving storage completed</string>
    <string name="storageNonRemovable">Non-removable storage</string>
    <string name="storageRemovable">Removable SD Card</string>
    <string name="notification_course_update_title">New course updates</string>
	<string name="notification_course_update_text">Updates are available for your courses.</string>
	<string name="title_login">Login</string>
	<string name="login_username_title">Username</string>
	<string name="login_password_title">Password</string>
	<string name="title_register">Register</string>
	<string name="register_form_username_title">Username (*)</string>
	<string name="register_form_email_title">Email address (*)</string>
	<string name="register_form_firstname_title">First name (*)</string>
	<string name="register_form_jobtitle_title">Job Title</string>
	<string name="register_form_lastname_title">Last name (*)</string>
	<string name="register_form_organisation_title">Organisation</string>
	<string name="register_form_password_title">Password (*)</string>
	<string name="register_form_password_again_title">Password (again) (*)</string>
	<string name="register_form_phoneno_title">Phone number (*)</string>
	<string name="register_btn_text">Register</string>
	<string name="reset_username_title">Username or Email</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="close">Close</string>
	<string name="error">Error</string>
	<string name="info">Info</string>
	<string name="warning">Warning</string>
	<string name="loading">Loading</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="logout">Logout</string>
	<string name="feedback">Feedback</string>
	<string name="download">Download</string>
	<string name="downloaded">Downloaded</string>
	<string name="open">Open</string>
	<string name="storage_default">Default</string>
	<string name="alert_pretest">Pre-test</string>
	<string name="alert_pretest_summary">This course contains a pre-test which you need to complete before you can view the full course.</string>
	<string name="tag_label">%1$s (%2$d)</string>
	<string name="alt_activity_icon">Activity icon</string>
	<string name="update">Update</string>
	<string name="update_schedule">Update Schedule</string>
	<string name="installed">Installed</string>
	<string name="install">Install</string>
	<string name="download_starting">Download starting</string>
	<string name="downloading">Downloading &#8230;</string>
	<string name="download_complete">Download complete</string>
	<string name="update_starting">Getting schedule updates</string>
	<string name="updating">Updating &#8230;</string>
	<string name="update_complete">Schedule update complete</string>
	<string name="installing_course">Installing: %1$s</string>
	<string name="install_complete">Installation complete</string>
	<string name="install_course_complete">%1$s: installed</string>
	<string name="info_scan_media_start">Scanning for media</string>
	<string name="info_scan_media_checking">Checking for: %1$s</string>
	<string name="info_scan_media_missing">Some media files are missing for your courses.</string>
	<string name="info_upgrading">Upgrading to %1$s</string>
	<string name="loading_courses">Loading courses</string>
	<string name="loading_points">Loading points &#8230;</string>
	<string name="loading_badges">Loading badges &#8230;</string>
	<string name="info_no_badges">You don\'t have any badges yet. Complete a full course to earn your first badge.</string>
	<string name="scan_media_download_button">Download</string>
	<string name="clientreg_form_name_title">Name</string>
	<string name="clientreg_form_mobile_title">Mobile No</string>
	<string name="clientreg_form_age_title">Age</string>
	<string name="clientreg_form_sex_title">Sex</string>
	<string name="clientreg_form_married_title">Married</string>
	<string name="clientreg_form_parity_title">Parity</string>
	<string name="clientreg_form_lifestage_title">Life Stage</string>
	<string name="submit_btn_text">Next &gt;&gt;</string>
    <string name="clients_list">List of your clients</string>
    <string name="client_add_new">Add New Client</string>
    <string name="no_client_message">You don\'t have any existing clients</string>
</resources>