<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="left"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/clientreg_form_name_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_name_title" />

        <EditText
            android:id="@+id/clientreg_form_name_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/clientreg_form_mobile_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_mobile_title" />

        <EditText
            android:id="@+id/clientreg_form_mobile_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
        
        
        
         <TextView
            android:id="@+id/clientreg_form_sex_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_sex_title" />

        <Spinner
            android:id="@+id/clientreg_form_sex_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/clientreg_form_married_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_married_title" />

        <Spinner
            android:id="@+id/clientreg_form_married_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/clientreg_form_age_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_age_title" />
        <EditText
            android:id="@+id/clientreg_form_age_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        
         <TextView
            android:id="@+id/clientreg_form_parity_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_parity_title" />

        <Spinner
            android:id="@+id/clientreg_form_parity_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/clientreg_form_lifestage_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientreg_form_lifestage_title" />

        <Spinner
            android:id="@+id/clientreg_form_lifestage_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn_text" />
    </LinearLayout>

</ScrollView>