<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/routing_activity_title"
        style="@style/HeaderText"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button_learning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/routing_button_mlearning"
        android:textColor="@color/text_dark" />

    <Button
        android:id="@+id/button_counselling"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/routing_button_client"
        android:textColor="@color/text_dark" />

</LinearLayout>