<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical" >

    <LinearLayout
        android:id="@+id/list_rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/list_create_client"
                android:layout_width="0dp"
                android:layout_height="@dimen/client_fields_title_height"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:text="@string/client_add_new" />

            <Button
                android:id="@+id/search_client"
                android:layout_width="0dp"
                android:layout_height="@dimen/client_fields_title_height"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/menu_search" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/clients_list"
            android:textSize="@dimen/title_text_size" />
    </LinearLayout>

    <View
        android:id="@+id/list_v_hr"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/border_size"
        android:layout_below="@id/list_rl_header"
        android:background="#000000" />

    <ListView
        android:id="@+id/list_lv_clients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_v_hr"
        android:cacheColorHint="#00000000"
        android:divider="@color/list_divider"
        android:dividerHeight="@dimen/border_size"
        android:listSelector="@drawable/background_change_pressed" />

    <TextView
        android:id="@+id/tv_no_clients"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_below="@id/list_v_hr"
        android:layout_centerInParent="true"
        android:text="@string/no_client_message"
        android:textSize="@dimen/client_fields_title_height" />

</RelativeLayout>